@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::Most tests => 17;
+use Test::Most tests => 25;
 use Test::NoWarnings;
 use Sys::Hostname;
 
@@ -45,8 +45,26 @@ HOSTNAMES: {
 	ok($i->domain_name() eq 'example.com');
 
         delete $ENV{'HTTP_HOST'};
+	delete $ENV{'SCRIPT_URI'};
+	$ENV{'SERVER_NAME'} = 'www.bandsman.co.uk';
+
+	$i = new_ok('CGI::Info');
+	ok($i->cgi_host_url() eq 'http://www.bandsman.co.uk');;
+	ok($i->host_name() eq 'www.bandsman.co.uk');
+	# Check calling twice return path
+	ok($i->cgi_host_url() eq 'http://www.bandsman.co.uk');;
 
 	$ENV{'SERVER_NAME'} = 'www.bandsman.co.uk';
+	$ENV{'SERVER_PORT'} = 443;
+
+	$i = new_ok('CGI::Info');
+	ok($i->cgi_host_url() eq 'https://www.bandsman.co.uk');;
+	ok($i->host_name() eq 'www.bandsman.co.uk');
+	# Check calling twice return path
+	ok($i->cgi_host_url() eq 'https://www.bandsman.co.uk');;
+
+	$ENV{'SERVER_PORT'} = 80;
+
 	$i = new_ok('CGI::Info');
 	ok($i->cgi_host_url() eq 'http://www.bandsman.co.uk');;
 	ok($i->host_name() eq 'www.bandsman.co.uk');
