@@ -4,6 +4,7 @@ Revision history for CGI-Info
 	Fix problem where mobile Chrome claimed it's a robot when data
 		compression is enabled
 	Ensure + is handled in parameters when encoded as %2B
+	cgi_host_url could sometimes give http:// instead of https://
 
 0.51	Fri Jan  2 20:34:46 EST 2015
 	Fix breakage on older Perls
